--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Deploy to EC2
         run: |
           ssh -i private_key -o StrictHostKeyChecking=no ubuntu@35.159.46.250 << 'EOF'
-            cd /var/www/prop
+            cd /var/www/prop/prop
             git pull origin main
             npm install
             npm run build
